(library
 (name eio_process)
 (public_name eio-process)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Or_error.Let_syntax)
 (libraries base eio parsexp)
 (instrumentation
  (backend bisect_ppx))
 (preprocess
  (pps ppx_jane ppx_js_style -check-doc-comments)))
